# coursera-gradebook-discrepancy-resolver

./: B3 Grade Corrections Template new.xlsx  B3_Grade_Corrections_FINAL.xlsx  README.md  dummy_coursera_data.csv  dummy_registrar_data.csv  fileloader.py  integratingpt3.py  outputting.py  pyproject.toml
.github/workflows/: build_executable.yml  upload_release.yml
grade-verification/: b3_generator.py  grade_verification.py  main.py
grade-verification/page_objects/: base_page.py  home_page.py  login_page.py
grade-verification/scripts/: couseraWrapper.py  gen_email.py  generate_dummy_coursera_data.py  selenium_login.py
grade_verification/page_objects/: <table class="htCore" role="presentation.html  base_page.py  course_page.py  grade_page.py  home_page.py  login_page.py  section_page.py  session_page.py  spinner.py
grade_verification/scripts/: GradeAddReportTest.xlsx  GradeAddReport_2251_S1_CSCA - NODATA.xlsx  Grade_Corrections.xlsx  courseraWrapper.py  coursera_controller.py  data_loader.py  emailer.py  getData.py  main.py
grade_verification/scripts/Coursera-Gradebooks/: Coursera_Gradebook_9997_CSCA.csv  Coursera_Gradebook_9998_CSCA.csv
hooks/: hook-webdriver_manager.py
