[tool.poetry]
name = "coursera"
version = "0.1.0"
description = ""
authors = [
    "Alexander Archer <alar2300@colorado.edu>",
    "Aniket Chauhan <>",
    "Clement Canal <>",
    "Jesse Black <>",
    "Nasir Naqvi <nasirlnaqvi@gmail.com>"
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
ruff = "^0.6.8"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
selenium = "^4.28.1"
faker = "^35.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


