[tool.poetry]
name = "coursera-grade-verifier"
version = "0.1.0"
description = "A Selenium script to scrape Coursera Gradebooks"
authors = [
    "Alexander Archer <alar2300@colorado.edu>",
    "Aniket Chauhan <>",
    "Clement Canal <>",
    "Jesse Black <>",
    "Nasir Naqvi <nasirlnaqvi@gmail.com>"
]
readme = "README.md"
packages = [
    {include = "grade_verification"}
]


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
black = "^24.8.0"
ruff = "^0.6.8"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
selenium = "^4.28.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coursera-grade-verifier = "grade_verification.scripts.coursera_controller:main"

